# fujida_agent

./: .gitignore  Dockerfile  alembic.ini  docker-compose.override.yml  docker-compose.yaml  pyproject.toml  pytest.ini
src/: settings.py
src/apps/: main.py
src/apps/knowledge_base/: intent_router.py  prompt_template.py
src/apps/knowledge_base/services/: alias_search.py  answer_service.py  compare.py  device_repo.py  device_search.py  device_service.py  dialog_history.py  faq_search.py  faq_service.py  search_gateway.py  specs_search.py  vector_search.py
src/apps/telegram_bot/: dispatcher.py  main.py  router.py
src/apps/telegram_bot/commands/: commands.py  start.py
src/apps/telegram_bot/handlers/: chat.py  help.py  start.py
src/apps/telegram_bot/keyboards/: phone_kb.py
src/apps/telegram_bot/services/: openai_service.py  start_service.py  voice_service.py
src/apps/telegram_bot/states/: registration.py
src/apps/whatsapp_bot/: router.py  services.py
src/common/: devices.json  faq.csv  openai_client.py  product.json  redis_client.py
src/db/: session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 03d51956d3cd_add_devices_table_manually.py  6814e7e39529_add_user.py  (+2 more)
src/db/models/: __init__.py  devices.py  faq_entry.py  user.py
src/logger/: __init__.py  config.py  context.py  formatters.py
src/logger/middlewares/: aiogram.py  fastapi.py
src/tests/: conftest.py  test_alias_search.py  test_alias_search_catalog.py
src/utils/: google_sheets.py  import_devices.py  import_faq.py  phone_validation.py  telegram.py  text.py
