[tool.poetry]
name = "fujida_agent"
version = "0.1.0"
description = ""
authors = ["Elisey <eliseyblajen@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic-settings = "^2.10.1"
aiogram = "^3.21.0"
pgvector = "^0.4.1"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
